--- a/html/info.html
+++ b/html/info.html
@@ -39,8 +39,8 @@ p {
     <p>Created on: 2nd January 2024 7:03PM MST</p>
     <p>Made using: Electron</p>
     <p>Installer created with: Electron-builder</p>
-    <p>Open source: No</p>
-    <p>License: CC-BY-ND-4.0</p>
+    <p>Open source: Yes</p>
+    <p>License: DAL</p>
     <p>Avaliable Platforms: Windows</p>
     <button id="GoBackBtn">Go back</button>
     <!--Enter stuff here-->
